3.9.3/_sources/_tags/domain-statistics.rst.txt
.. _sphx_tag_domain-statistics:

All tags: domain: statistics
############################

.. toctree::
    :maxdepth: 1
    :caption: With this tag

    ../gallery/statistics/boxplot.rst
    ../gallery/statistics/boxplot_color.rst
    ../gallery/statistics/boxplot_demo.rst
    ../gallery/statistics/boxplot_vs_violin.rst
    ../gallery/statistics/bxp.rst
    ../gallery/statistics/confidence_ellipse.rst
    ../gallery/statistics/customized_violin.rst
    ../gallery/statistics/errorbar.rst
    ../gallery/statistics/errorbar_features.rst
    ../gallery/statistics/errorbar_limits.rst
    ../gallery/statistics/errorbars_and_boxes.rst
    ../gallery/statistics/hexbin_demo.rst
    ../gallery/statistics/hist.rst
    ../gallery/statistics/histogram_bihistogram.rst
    ../gallery/statistics/histogram_cumulative.rst
    ../gallery/statistics/histogram_histtypes.rst
    ../gallery/statistics/histogram_multihist.rst
    ../gallery/statistics/histogram_normalization.rst
    ../gallery/statistics/multiple_histograms_side_by_side.rst
    ../gallery/statistics/violinplot.rst
